# LCSC-MCP-Server

./: .coverage  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
lcsc_mcp/: client.py  db.py  server.py
scripts/: rebuild_specs.py
tests/: conftest.py  test_client.py  test_db.py  test_server.py
