[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcsc-mcp"
version = "0.1.0"
description = "MCP server for LCSC/JLCPCB parts database (official API)"
requires-python = ">=3.11"
dependencies = [
    "easyeda2kicad>=0.8.0",
    "fastmcp>=2.0",
    "requests>=2.31",
]

[project.scripts]
lcsc-mcp = "lcsc_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lcsc_mcp --cov-report=term-missing --cov-branch"

[tool.coverage.run]
branch = true
source = ["lcsc_mcp"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]

[tool.hatch.build.targets.wheel]
packages = ["lcsc_mcp"]
